# agent-conversational-compass

./: .env.example  .gitignore  DOCKER_SETUP.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yaml  index.html  package.json
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
backend/graph/: build_graph.py  nodes.py
backend/services/: embeddings.py  mcp_client.py  qdrant_client.py  stripe_client.py
backend/tests/: test_main.py  test_services.py
diagrams/: architecture.mermaid  architecture.plantuml  dataflow.mermaid  dataflow.plantuml  docker-services.mermaid  memory-architecture.mermaid  memory-architecture.plantuml
frontend/: CONFIG.md  Dockerfile  Dockerfile.dev  index.html  nginx.conf  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  vite-env.d.ts
frontend/src/components/: AnalyticsDashboard.tsx  ChatInterface.tsx  Dashboard.tsx  MCPInterface.tsx  SearchInterface.tsx
frontend/src/config/: api.ts
frontend/src/pages/: Index.tsx
infra/: qdrant_init.sh
infra/database/: schema.sql  seed_data.sql
mcp_server/: Dockerfile  database_tools.py  dispatcher.py  requirements.txt
src/pages/: Index.tsx
worker/: Dockerfile  requirements.txt  worker.py
